[gd_scene load_steps=10 format=2]

[ext_resource path="res://blocks/block.gd" type="Script" id=1]
[ext_resource path="res://blocks/blockui.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.9, 0.2, 0.9 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape/MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape/MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "selected"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape/MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.3, 0 ) ]
}

[node name="block" type="StaticBody" groups=["blocks"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="blockui" type="Control" parent="." groups=["closeme"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.5
margin_top = -117.5
margin_right = 155.5
margin_bottom = 117.5
mouse_filter = 2
script = ExtResource( 2 )

[node name="blockinfo" type="ColorRect" parent="blockui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -157.5
margin_right = 192.0
margin_bottom = 157.5
mouse_filter = 2
color = Color( 0.396078, 0.596078, 0.662745, 0.333333 )

[node name="key" type="VBoxContainer" parent="blockui/blockinfo"]
anchor_right = 1.0
margin_bottom = 50.0
alignment = 1

[node name="name" type="Label" parent="blockui/blockinfo/key"]
margin_right = 384.0
margin_bottom = 14.0
text = "name"
align = 1

[node name="type" type="Label" parent="blockui/blockinfo/key"]
margin_top = 18.0
margin_right = 384.0
margin_bottom = 32.0
text = "name"
align = 1

[node name="value" type="Label" parent="blockui/blockinfo/key"]
margin_top = 36.0
margin_right = 384.0
margin_bottom = 50.0
text = "name"
align = 1

[node name="owner" type="Label" parent="blockui/blockinfo/key"]
margin_top = 54.0
margin_right = 384.0
margin_bottom = 68.0
text = "name"
align = 1

[node name="GridContainer" type="GridContainer" parent="blockui/blockinfo"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -202.0
margin_right = -277.0

[node name="buy" type="Button" parent="blockui/blockinfo/GridContainer"]
margin_right = 100.0
margin_bottom = 20.0
disabled = true
text = "buy"

[node name="upgrade" type="Button" parent="blockui/blockinfo/GridContainer"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
disabled = true
text = "upgrade"

[node name="button" type="Button" parent="blockui/blockinfo/GridContainer"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "do something"

[node name="close" type="Button" parent="blockui/blockinfo/GridContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
text = "do nothing"

[node name="upmenu" type="ItemList" parent="blockui/blockinfo"]
visible = false
margin_left = 124.0
margin_top = 130.0
margin_right = 237.0
margin_bottom = 253.0

[node name="ColorRect" type="ColorRect" parent="blockui"]
visible = false
margin_left = 146.0
margin_top = 98.0
margin_right = 309.0
margin_bottom = 251.0
mouse_filter = 2
color = Color( 0.396078, 0.596078, 0.662745, 0.333333 )

[node name="Button" type="Button" parent="blockui/ColorRect"]
margin_left = 13.0
margin_top = 49.0
margin_right = 126.0
margin_bottom = 69.0
text = "CLICK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/default = SubResource( 6 )
anims/selected = SubResource( 7 )

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
[connection signal="pressed" from="blockui/blockinfo/GridContainer/buy" to="." method="buy" binds= [ "\"you\"" ]]
[connection signal="pressed" from="blockui/blockinfo/GridContainer/upgrade" to="blockui" method="_on_upgrade_pressed"]
[connection signal="pressed" from="blockui/blockinfo/GridContainer/close" to="blockui" method="close"]
[connection signal="item_activated" from="blockui/blockinfo/upmenu" to="blockui" method="_on_upmenu_item_activated"]
